--- a/views/index.hbs
+++ b/views/index.hbs
@@ -210,14 +210,19 @@
         document.getElementById("mySidenav").style.width = "0";
     }
 
+    function load()
+    {
+         document.getElementById('load').innerHTML='Loading Image...';
+    }
+
     </script>
  
    <br><br>
    <center>
    <div id="uploads">
  
-      <input type="file" id="imageUpload" class="btn btn-success" accept=".jpg, .jpeg, .JPG">
-     
+      <input type="file" id="imageUpload" oninput="load()" class="btn btn-success" accept=".jpg, .jpeg, .JPG">
+      <br><div id='load'></div>
    
    </div>
   </center>
